rgw: fix crash issue when getting S3 website root without last slash

Fixes: https://tracker.ceph.com/issues/48049

Signed-off-by: Ilsoo Byun <ilsoobyun@linecorp.com>